--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -80,7 +80,7 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
       </footer>
     </div>
     <figure>
-      <img src={image} alt={name} />
+      <img src={image} alt={name} style="width: 135px; height: 135px;"/>
     </figure>
   </div>
 </Section>
