--- a/src/components/sections/Publication.astro
+++ b/src/components/sections/Publication.astro
@@ -2,20 +2,20 @@
 import GitHub from "@/icons/GitHub.astro"
 import Section from "../Section.astro"
 
-import { projects } from "@cv"
+import { publications } from "@cv"
 ---
 
-<Section title="Projects">
+<Section title="Publication">
   <ul>
     {
-      projects.map(
+      publications.map(
         ({ url, description, highlights, name, isActive, github }) => {
           return (
             <li>
               <article>
                 <header>
                   <h3>
-                    <a href={url} target="_blank" title={`See the project ${name}`}>
+                    <a href={url} target="_blank" title={`See the publication ${name}`}>
                       {name}
                     </a>
                     {isActive && <span>•</span>}
@@ -24,7 +24,7 @@ import { projects } from "@cv"
                         class="github-code-link"
                         href={github}
                         target="_blank"
-                        title={`View project source code ${name}`}
+                        title={`View paper source code ${name}`}
                       >
                         <GitHub />
                       </a>
