--- a/src/components/sections/Publication.astro
+++ b/src/components/sections/Publication.astro
@@ -1,8 +1,8 @@
 ---
-import GitHub from "@/icons/GitHub.astro"
-import Section from "../Section.astro"
+import GitHub from "@/icons/GitHub.astro";
+import Section from "../Section.astro";
 
-import { publications } from "@cv"
+import { publications } from "@cv";
 ---
 
 <Section title="Publication">
@@ -15,7 +15,11 @@ import { publications } from "@cv"
               <article>
                 <header>
                   <h3>
-                    <a href={url} target="_blank" title={`See the publication ${name}`}>
+                    <a
+                      href={url}
+                      target="_blank"
+                      title={`See the publication ${name}`}
+                    >
                       {name}
                     </a>
                     {isActive && <span>•</span>}
@@ -34,13 +38,13 @@ import { publications } from "@cv"
                 </header>
                 <footer>
                   {highlights.map((highlight) => {
-                    return <span>{highlight}</span>
+                    return <span>{highlight}</span>;
                   })}
                 </footer>
               </article>
             </li>
-          )
-        }
+          );
+        },
       )
     }
   </ul>
@@ -88,7 +92,7 @@ import { publications } from "@cv"
 
   article h3 span {
     color: rgb(0, 188, 47);
-animation-name: flicker;
+    animation-name: flicker;
     animation-duration: 3s;
     animation-timing-function: ease-in;
     animation-iteration-count: infinite;
