--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -8,8 +8,8 @@ import TypeScript from "@/icons/type.astro";
 import React from "@/icons/react.astro";
 import Node from "@/icons/node.astro";
 import MySQL from "@/icons/sql.astro";
+import GitHub from "@/icons/github.astro";
 import Git from "@/icons/git.astro";
-import GitHub from "@/icons/GitHub.astro";
 import Tailwind from "@/icons/tailwind.astro";
 import Next from "@/icons/next.astro";
 
