--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -1,5 +1,5 @@
 ---
-import GitHub from "@/icons/GitHub.astro";
+import GitHub from "@/icons/github.astro";
 import Section from "../Section.astro";
 
 import { projects } from "@cv";
