--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -5,7 +5,7 @@ import Mail from "@/icons/Mail.astro";
 import Phone from "@/icons/Phone.astro";
 import X from "@/icons/X.astro";
 import LinkedIn from "@/icons/LinkedIn.astro";
-import GitHub from "@/icons/GitHub.astro";
+import GitHub from "@/icons/github.astro";
 import Medium from "@/icons/Medium.astro";
 import WorldMap from "@/icons/WorldMap.astro";
 import type { SocialIcon } from "@/types";
