--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 
 import About from "@/components/sections/About.astro";
 import Education from "@/components/sections/Education.astro";
+import Certificates from "@/components/sections/Certificates.astro";
 import Experience from "@/components/sections/Experience.astro";
 import Hero from "@/components/sections/Hero.astro";
 import Projects from "@/components/sections/Projects.astro";
@@ -21,6 +22,7 @@ const { name, label } = basics;
     <Experience />
     <Education />
     <Publication />
+    <Certificates />
   </main>
 
   <KeyboardManager />
