--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -1,8 +1,8 @@
 ---
-import GitHub from "@/icons/GitHub.astro"
-import Section from "../Section.astro"
+import GitHub from "@/icons/github.astro";
+import Section from "../Section.astro";
 
-import { projects } from "@cv"
+import { projects } from "@cv";
 ---
 
 <Section title="Projects">
@@ -13,34 +13,43 @@ import { projects } from "@cv"
           return (
             <li>
               <article>
-                <header>
-                  <h3>
-                    <a href={url} target="_blank" title={`See the project ${name}`}>
-                      {name}
-                    </a>
-                    {isActive && <span>•</span>}
-                    {github && (
+                <div class="article-inner">
+                  <header>
+                    <h3>
                       <a
-                        class="github-code-link"
-                        href={github}
+                        href={url}
                         target="_blank"
-                        title={`View project source code ${name}`}
+                        title={`See the project ${name}`}
                       >
-                        <GitHub />
+                        {name}
                       </a>
-                    )}
-                  </h3>
-                  <p>{description}</p>
-                </header>
-                <footer>
-                  {highlights.map((highlight) => {
-                    return <span>{highlight}</span>
-                  })}
-                </footer>
+                      {isActive && <span>•</span>}
+                      {github && (
+                        <a
+                          class="github-code-link"
+                          href={github}
+                          target="_blank"
+                          title={`View project source code ${name}`}
+                        >
+                          <GitHub />
+                        </a>
+                      )}
+                    </h3>
+                    <p>{description}</p>
+                  </header>
+                  <footer>
+                    {highlights.map((highlight) => {
+                      return <span>{highlight}</span>;
+                      <div class="tag" title={highlight}>
+                        <span>{highlight}</span>
+                      </div>;
+                    })}
+                  </footer>
+                </div>
               </article>
             </li>
-          )
-        }
+          );
+        },
       )
     }
   </ul>
@@ -49,7 +58,8 @@ import { projects } from "@cv"
 <style>
   ul {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    max-width: 750px;
     gap: 1rem;
     margin-inline: -16px;
   }
@@ -62,6 +72,11 @@ import { projects } from "@cv"
     flex-direction: column;
     padding: 16px;
     height: 100%;
+    transition: box-shadow 0.3s ease;
+  }
+
+  article:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   article header {
@@ -88,7 +103,7 @@ import { projects } from "@cv"
 
   article h3 span {
     color: rgb(0, 188, 47);
-animation-name: flicker;
+    animation-name: flicker;
     animation-duration: 3s;
     animation-timing-function: ease-in;
     animation-iteration-count: infinite;
@@ -99,6 +114,7 @@ animation-name: flicker;
     flex-wrap: wrap;
     gap: 4px;
     font-size: 0.6rem;
+    padding-top: 10px;
   }
 
   footer span {
@@ -112,6 +128,10 @@ animation-name: flicker;
 
   .github-code-link {
     margin-left: 5px;
+  }
+
+  .article-inner {
+    padding: 8px;
   }
 
   @keyframes flicker {
