--- a/src/components/sections/Certificates.astro
+++ b/src/components/sections/Certificates.astro
@@ -125,7 +125,7 @@ import { certificates } from "@cv";
 
   .logo-wrapper {
     position: absolute;
-    top: 16px;
+    bottom: 16px;
     right: 16px;
   }
 
